Git images change

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
           </div>
 
           <h4>Criação de modelos de avaliação / Creating an Appraisal Template</h4>
-          <img id="modelo-avaliacao" src="assets/images/modelo_avaliacao_png.png" alt="" data-wait="true" data-gif="assets/images/modelo_avaliacao.gif" style="width: 100%;" />
+          <img id="modelo-avaliacao" src="assets/images/modelo_avaliacao_png.png" alt="" data-gif="assets/images/modelo_avaliacao.gif" style="width: 100%;" />
           <hr>
           <h4>Criação de Avaliações / Creating an Appraisal</h4>
-          <img id="avaliacao" src="assets/images/avaliacao_png.png" alt="" data-wait="true" data-gif="assets/images/avaliacao.gif" style="width: 100%;" />
+          <img id="avaliacao" src="assets/images/avaliacao_png.png" alt="" data-gif="assets/images/avaliacao.gif" style="width: 100%;" />
           <hr>
           <h4>Criação de marcações / Creating Tags</h4>
-          <img id="criacao-tag" src="assets/images/criar_tag_png.png" alt="" data-wait="true" data-gif="assets/images/criar_tag.gif" style="width: 100%;" />
+          <img id="criacao-tag" src="assets/images/criar_tag_png.png" alt="" data-gif="assets/images/criar_tag.gif" style="width: 100%;" />
           <hr>
           <h4>Visualização de marcações / Viewing tags</h4>
-          <img id="visualizacao-tag" src="assets/images/visualizar_tag_png.png" alt="" data-wait="true" data-gif="assets/images/visualizar_tag.gif" style="width: 100%;" />
+          <img id="visualizacao-tag" src="assets/images/visualizar_tag_png.png" alt="" data-gif="assets/images/visualizar_tag.gif" style="width: 100%;" />
         </div>
 
 
