--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="assets/javascripts/ie-emulation-modes-warning.js"></script>
 
+    <script src="assets/javascripts/jquery-1.11.2.min.js"></script>
+    <script src="assets/javascripts/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="assets/javascripts/ie10-viewport-bug-workaround.js"></script>
+
+    <!-- freezeframe.js  -->
+    <script type="text/javascript" src="assets/javascripts/gif_post.js"></script>
+    <link href="assets/stylesheets/gif_post.css" rel="stylesheet">
+
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -70,43 +74,24 @@
           </div>
 
           <h4>Criação de modelos de avaliação / Creating an Appraisal Template</h4>
-          <img id="modelo-avaliacao" src="assets/images/modelo_avaliacao_png.png" alt="" data-gif="assets/images/modelo_avaliacao.gif" style="width: 100%;" />
+          <img src="assets/images/modelo_avaliacao.gif" style="width: 100%;"/>
           <hr>
+
           <h4>Criação de Avaliações / Creating an Appraisal</h4>
-          <img id="avaliacao" src="assets/images/avaliacao_png.png" alt="" data-gif="assets/images/avaliacao.gif" style="width: 100%;" />
+          <img src="assets/images/avaliacao.gif" class="freezeframe" style="width: 100%;"/>
           <hr>
+
           <h4>Criação de marcações / Creating Tags</h4>
-          <img id="criacao-tag" src="assets/images/criar_tag_png.png" alt="" data-gif="assets/images/criar_tag.gif" style="width: 100%;" />
+          <img src="assets/images/criar_tag.gif" class="freezeframe" style="width: 100%;"/>
           <hr>
+
           <h4>Visualização de marcações / Viewing tags</h4>
-          <img id="visualizacao-tag" src="assets/images/visualizar_tag_png.png" alt="" data-gif="assets/images/visualizar_tag.gif" style="width: 100%;" />
+          <img src="assets/images/visualizar_tag.gif" class="freezeframe" style="width: 100%;"/>
         </div>
 
 
       </div>
 
     </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/javascripts/jquery-1.11.2.min.js"></script>
-    <script src="assets/javascripts/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="assets/javascripts/ie10-viewport-bug-workaround.js"></script>
-
-    <!-- gifplayer  -->
-    <link href="assets/stylesheets/gifplayer.css" rel="stylesheet">
-    <script src="assets/javascripts/gifplayer.js"></script>
-
-    <script type="text/javascript">
-      $(document).ready( function(){
-        $('#modelo-avaliacao').gifplayer();
-        $('#avaliacao').gifplayer();
-        $('#criacao-tag').gifplayer();
-        $('#visualizacao-tag').gifplayer();
-      })
-    </script>
   </body>
 </html>
