--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
 
             <p><i class="fa fa-github"></i> <a href="https://github.com/hylozero/redmine_tpa">Github</a></p>
           </div>
-
+        </div>
+        <div class="col-md-12">
+          <hr>
+        </div>
+        <div class="col-md-9 col-md-offset-3">
           <h4>Criação de modelos de avaliação / Creating an Appraisal Template</h4>
           <img src="assets/images/modelo_avaliacao.gif" style="width: 100%;"/>
           <hr>
