--- a/index.html
+++ b/index.html
@@ -43,59 +43,81 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="navbar-brand" href="https://github.com/hylozero/redmine_tpa">redmine_tpa</a>
         </div>
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container redmine-tpa">
       <!-- Main component for a primary marketing message or call to action -->
 
       <div class="row">
-        <div class="col-md-3 col-sm-3 col-xs-12">
+        <div class="col-md-4 col-sm-4 col-xs-12">
           <h2>Redmine TPA<br/>
             <small>Tags for Personal Appraisal</small><br/>
           </h2>
           
         </div>
-        <div class="col-md-9" id="tpa-content">
+        <div class="col-md-8 col-sm-8 col-xs-12">
           <div class="jumbotron">
-            <p>Redmine TPA (Tag for Performance Appraisal) é um plugin redmine que ajuda avaliadores em avaliações de desempenho. Ele torna possível a criação de marcações que unem tarefas a critérios pré-estabelecidos ou objetivos organizacionais.</p>
+            <p>Redmine TPA (Tag for Performance Appraisal) é um plugin redmine que auxilia avaliações de desempenho. Ele torna possível a criação de marcações que unem tarefas a critérios pré-estabelecidos ou objetivos organizacionais.</p>
 
-            <p>Redmine TPA (Tag for Performance Appraisal) is a redmine plugin that helps appraisers and appraisees in Performance Appraisals. The plugin makes possible to create tags that link issues to pre-established criteria or organizational objectives.</p>
+            <p>Redmine TPA (Tag for Performance Appraisal) is a redmine plugin that helps Performance Appraisals. It makes possible to create tags that link issues to pre-established criteria or organizational objectives.</p>
 
+            <hr>
             <p><i class="fa fa-github"></i> <a href="https://github.com/hylozero/redmine_tpa">Github</a></p>
+
           </div>
         </div>
         <div class="col-md-12">
           <hr>
         </div>
-        <div class="col-md-9 col-md-offset-3">
-          <h4>Criação de modelos de avaliação / Creating an Appraisal Template</h4>
-          <img src="assets/images/modelo_avaliacao.gif" style="width: 100%;"/>
-          <hr>
 
-          <h4>Criação de Avaliações / Creating an Appraisal</h4>
-          <img src="assets/images/avaliacao.gif" class="freezeframe" style="width: 100%;"/>
-          <hr>
-
-          <h4>Criação de marcações / Creating Tags</h4>
-          <img src="assets/images/criar_tag.gif" class="freezeframe" style="width: 100%;"/>
-          <hr>
-
-          <h4>Visualização de marcações / Viewing tags</h4>
-          <img src="assets/images/visualizar_tag.gif" class="freezeframe" style="width: 100%;"/>
+        <div class="col-md-4 col-sm-4 col-xs-12">
+          <h4>
+            Crie modelos de avaliação<br/>
+            <small>Create Appraisal Templates</small></h4>
         </div>
 
+        <div class="col-md-8 col-sm-8 col-xs-12">
+          <img src="assets/images/modelo_avaliacao.jpg" style="width: 100%;"/>
+          <hr>
+        </div>
 
-      </div>
+        <div class="col-md-4 col-sm-4 col-xs-12">
+          <h4>
+            Crie Avaliações<br/>
+            <small>Create Appraisals</small>
+          </h4>
+        </div>
 
+        <div class="col-md-8 col-sm-8 col-xs-12">
+          <img src="assets/images/avaliacao.jpg" class="freezeframe" style="width: 100%;"/>
+          <hr>
+        </div>
+
+        <div class="col-md-4 col-sm-4 col-xs-12">
+          <h4>
+            Faça marcações<br/>
+            <small>Tag</small>
+          </h4>
+        </div>
+
+        <div class="col-md-8 col-sm-8 col-xs-12">
+          <img src="assets/images/criar_tag.jgp" class="freezeframe" style="width: 100%;"/>
+          <hr>
+        </div>
+
+        <div class="col-md-4 col-sm-4 col-xs-12">
+          <h4>
+            Visualize marcações<br/>
+            <small>View tags</small>
+          </h4>
+        </div>
+
+        <div class="col-md-8 col-sm-8 col-xs-12">
+          <img src="assets/images/visualizar_tag.jpg" class="freezeframe" style="width: 100%;"/>
+        </div>
     </div> <!-- /container -->
   </body>
 </html>
