--- a/index.html
+++ b/index.html
@@ -67,18 +67,20 @@
       <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <h2>Redmine TPA<br/>
-            <small>Tags for Personal Appraisal</small><br/>
+            <small>Tags for Performance Appraisal</small><br/>
           </h2>
           
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
           <div class="jumbotron">
-            <p>Redmine TPA (Tag for Performance Appraisal) is a redmine plugin that helps Performance Appraisals. It makes possible to create tags that link issues to pre-established criteria or organizational objectives.</p>
+            <p>Redmine TPA (Tags for Performance Appraisal) is a redmine plugin that helps Performance Appraisals. It makes possible to link issues to pre-established criteria or organizational objectives.</p>
 
-            <p>Redmine TPA (Tag for Performance Appraisal) é um plugin redmine que auxilia avaliações de desempenho. Ele torna possível a criação de marcações que unem tarefas a critérios pré-estabelecidos ou objetivos organizacionais.</p>
+            <p>Redmine TPA (Tags for Performance Appraisal) é um plugin redmine que auxilia avaliações de desempenho. Ele torna possível a ligação de tarefas à critérios pré-estabelecidos ou objetivos organizacionais.</p>
 
             <hr>
-            <p><i class="fa fa-github"></i> <a href="https://github.com/hylozero/redmine_tpa">Github</a></p>
+            
+            <div class="col-md-2"><p><i class="fa fa-github"></i> <a href="https://github.com/hylozero/redmine_tpa">Github</a></p></div>
+            <div style="clear: both;"></div>
 
           </div>
         </div>
@@ -90,6 +92,10 @@
           <h4>
             Create Appraisal Templates<br/>
             <small>Crie modelos de avaliação</small></h4>
+            <hr>
+            <h5>Fields<br/>
+            <small>Name, Description and Criteria with sublevels</small>
+            </h5>
         </div>
 
         <div class="col-md-8 col-sm-8 col-xs-12">
@@ -103,6 +109,10 @@
           <h4>
             Create Appraisals<br/>
             <small>Crie Avaliações</small>
+            <hr>
+            <h5>Fields<br/>
+            <small>Template, One or more Appraisers, One or more Appraisees, Start at, End at and Appraiser note.</small>
+            </h5>
           </h4>
         </div>
 
@@ -115,13 +125,19 @@
 
         <div class="col-md-4 col-sm-4 col-xs-12">
           <h4>
-            Tag<br/>
-            <small>Faça marcações</small>
+            Link criteria to issues<br/>
+            <small>Una critérios à tarefas</small>
+            <hr>
+            <h5>Procedure:</h5>
+            <small>Open an issue, click on "Marcar para Avaliação" (pt-BR), select an appraisal and click on the tag icon located to the left of a criteria that you wish to link to the issue.</small>
+            <br/>
+            <h5>Procedimento:</h5>
+            <small>Abra uma tarefa, clique em "Marcar para Avaliação", selecione uma avaliação e clique no icone de etiqueta localizado a esquerda do criterio que voce deseja unir à tarefa.</small>
           </h4>
         </div>
 
         <div class="col-md-8 col-sm-8 col-xs-12">
-          <a href="assets/images/criar_tag.png" class='magnific-popup' title="Tag / Faça marcações">
+          <a href="assets/images/criar_tag.png" class='magnific-popup' title="Link criteria to issues / Una critérios à tarefas">
             <img src="assets/images/criar_tag.png" class="example-image"/>
           </a>
           <hr>
@@ -143,7 +159,7 @@
 
     <footer class="footer">
     <div class="container">
-    <p class="text-muted">Redmine TPA | hylozero | 2015 </p>
+    <p class="text-muted">Redmine TPA | hylozero@gmail.com | 2015 </p>
     </div>
     </footer>
   </body>
