--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -1,3 +1,4 @@
+    <meta name="description" content="">
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -86,9 +87,12 @@
           <div class="jumbotron">
             <p>Redmine TPA (Tags for Performance Appraisal) is a redmine plugin that helps Performance Appraisals. It makes possible to link issues to pre-established criteria or organizational objectives.</p>
 
+            <p>Redmine TPA (Tags for Performance Appraisal) é um plugin redmine que auxilia avaliações de desempenho. Ele torna possível a ligação de tarefas à critérios pré-estabelecidos ou objetivos organizacionais.</p>
+
             <hr>
             
-            <p><i class="fa fa-github"></i> <a href="https://github.com/hylozero/redmine_tpa">Github</a></p>
+            <div class="col-md-2"><p><i class="fa fa-github"></i> <a href="https://github.com/hylozero/redmine_tpa">Github</a></p></div>
+            <div style="clear: both;"></div>
 
           </div>
         </div>
@@ -99,7 +103,11 @@
         <div class="col-md-4 col-sm-4 col-xs-12">
           <h4>
             Create Appraisal Templates<br/>
-            <small>with name, description, criteria and criteria sublevels</small></h4>
+            <small>Crie modelos de avaliação</small></h4>
+            <hr>
+            <h5>Fields<br/>
+            <small>Name, Description and Criteria with sublevels</small>
+            </h5>
         </div>
 
         <div class="col-md-8 col-sm-8 col-xs-12">
@@ -112,7 +120,11 @@
         <div class="col-md-4 col-sm-4 col-xs-12">
           <h4>
             Create Appraisals<br/>
-            <small>with appraisal template selection, one or more appraisers selection, one or more appraisees selection, start at, end at and appraiser's note.</small>
+            <small>Crie Avaliações</small>
+            <hr>
+            <h5>Fields<br/>
+            <small>Template, One or more Appraisers, One or more Appraisees, Start at, End at and Appraiser note.</small>
+            </h5>
           </h4>
         </div>
 
@@ -126,7 +138,7 @@
         <div class="col-md-4 col-sm-4 col-xs-12">
           <h4>
             Link issues to criteria<br/>
-            <small>to help your performance appraisal</small>
+            <small>Una tarefas à critérios</small>
 <!--             <hr>
             <h5>Procedure:</h5>
             <small>Open an issue, click on "Marcar para Avaliação" (pt-BR), select an appraisal and click on the tag icon located to the left of a criteria that you wish to link to the issue.</small>
@@ -145,8 +157,8 @@
 
         <div class="col-md-4 col-sm-4 col-xs-12">
           <h4>
-            Check the issues and criteria<br/>
-            <small>that have been linked</small>
+            Check the issues and criteria that have been linked<br/>
+            <small>Visualize marcações</small>
           </h4>
         </div>
 
