--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <!-- Custom styles for this template -->
     <link href="assets/stylesheets/navbar-fixed-top.css" rel="stylesheet">
 
+    <!-- flags css -->
+    <link href="assets/stylesheets/common.css" rel="stylesheet">
+    <link href="assets/stylesheets/flags24.css" rel="stylesheet">
+
     <!-- redmine_tpa css -->
     <link href="assets/stylesheets/redmine_tpa.css" rel="stylesheet">
 
@@ -68,6 +72,20 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="https://github.com/hylozero/redmine_tpa">redmine_tpa</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <div class="f24 navbar-brand pull-right">
+                <a href="pt-br/index.html"><i class="flag br"></i></a>
+              </div>
+            </li>
+            <li>
+              <div class="f24 navbar-brand pull-right">
+                <a href="index.html"><i class="flag us"></i></a>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -125,7 +143,7 @@
 
         <div class="col-md-4 col-sm-4 col-xs-12">
           <h4>
-            Link issues to criteria<br/>
+            Link your issues to appraisal criteria<br/>
             <small>to help your performance appraisal</small>
 <!--             <hr>
             <h5>Procedure:</h5>
