--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -115,7 +115,7 @@
         </div>
 
         <div class="col-md-4 col-sm-4 col-xs-12">
-          <h4>Create Modelos de Avaliações</h4>
+          <h4>Crie Modelos de Avaliações</h4>
         </div>
 
         <div class="col-md-8 col-sm-8 col-xs-12">
@@ -138,7 +138,7 @@
 
         <div class="col-md-4 col-sm-4 col-xs-12">
           <h4>
-            Conecte suas tarefas à critérios de avaliação<br/>
+            Ligue suas tarefas à critérios de avaliação<br/>
             <small>para auxiliar seu avaliador</small>
 <!--             <hr>
             <h5>Procedure:</h5>
@@ -159,7 +159,7 @@
         <div class="col-md-4 col-sm-4 col-xs-12">
           <h4>
             Visualize as tarefas e critérios<br/>
-            <small>que foram conectados</small>
+            <small>que foram ligados</small>
           </h4>
         </div><a href="pt-br/index.html">
 
