--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
           <div class="jumbotron">
-           <p>Redmine TPA (Tags for Performance Appraisal) é um plugin redmine que auxilia avaliações de desempenho. Ele torna possível a ligação de tarefas à critérios pré-estabelecidos ou objetivos organizacionais.</p>
+           <p>Redmine TPA (Tags for Performance Appraisal) é um plugin redmine que auxilia avaliações de desempenho. Ele torna possível a ligação de tarefas à critérios ou objetivos organizacionais pré-estabelecidos.</p>
 
             <hr>
             
