--- a/index.html
+++ b/index.html
@@ -166,11 +166,50 @@
             Check the issues and criteria<br/>
             <small>that have been linked</small>
           </h4>
+          <h5>
+            Simple Bar Graph<br/>
+            <small>by Criteria</small>
+          </h5>
+
         </div>
 
         <div class="col-md-8 col-sm-8 col-xs-12">
-          <a href="assets/images/visualizar_tag.png" class='magnific-popup' title="View tags / Visualize marcações">
-            <img src="assets/images/visualizar_tag.png" class="example-image"/>
+          <a href="assets/images/1_barra.png" class='magnific-popup' title="View tags / Visualize marcações / Simple Bar Graph">
+            <img src="assets/images/1_barra.png" class="example-image"/>
+          </a>
+        </div>
+
+        <div class="col-md-4 col-sm-4 col-xs-12">
+         <h5>
+            Simple Bar Graph<br/>
+            <small>by Issue Tracker</small>
+          </h5>
+        </div>
+
+        <div class="col-md-8 col-sm-8 col-xs-12">
+          <a href="assets/images/2_torta.png" class='magnific-popup' title="View tags / Visualize marcações / Pie Graph">
+            <img src="assets/images/2_torta.png" class="example-image"/>
+          </a>
+        </div>
+
+        <div class="col-md-4 col-sm-4 col-xs-12">
+         <h5>
+            Full List<br/>
+          </h5>
+        </div>
+
+        <div class="col-md-8 col-sm-8 col-xs-12">
+          <a href="assets/images/3_lista1.png" class='magnific-popup' title="View tags / Visualize marcações / Tags List">
+            <img src="assets/images/3_lista1.png" class="example-image"/>
+          </a>
+          <a href="assets/images/3_lista2.png" class='magnific-popup' title="View tags / Visualize marcações / Tag List">
+            <img src="assets/images/3_lista2.png" class="example-image"/>
+          </a>
+          <a href="assets/images/3_lista4.png" class='magnific-popup' title="View tags / Visualize marcações / tag List">
+            <img src="assets/images/3_lista4.png" class="example-image"/>
+          </a>
+          <a href="assets/images/3_lista5.png" class='magnific-popup' title="View tags / Visualize marcações / Tag List">
+            <img src="assets/images/3_lista5.png" class="example-image"/>
           </a>
         </div>
     </div> <!-- /container -->
