--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -161,11 +161,50 @@
             Visualize as tarefas e critérios<br/>
             <small>que foram ligados</small>
           </h4>
-        </div><a href="pt-br/index.html">
+          <h5>
+            Gráfico de Barra imples<br/>
+            <small>por Critério</small>
+          </h5>
+
+        </div>
+
+       <div class="col-md-8 col-sm-8 col-xs-12">
+          <a href="../assets/images/1_barra.png" class='magnific-popup' title="View tags / Visualize marcações / Simple Bar Graph">
+            <img src="../assets/images/1_barra.png" class="example-image"/>
+          </a>
+        </div>
+
+        <div class="col-md-4 col-sm-4 col-xs-12">
+         <h5>
+            Grafico de Pizza<br/>
+            <small>por tipo de tarefa</small>
+          </h5>
+        </div>
 
         <div class="col-md-8 col-sm-8 col-xs-12">
-          <a href="../assets/images/visualizar_tag.png" class='magnific-popup' title="View tags / Visualize marcações">
-            <img src="../assets/images/visualizar_tag.png" class="example-image"/>
+          <a href="../assets/images/2_torta.png" class='magnific-popup' title="View tags / Visualize marcações / Pie Graph">
+            <img src="../assets/images/2_torta.png" class="example-image"/>
+          </a>
+        </div>
+
+        <div class="col-md-4 col-sm-4 col-xs-12">
+         <h5>
+            Lista completa de marcações<br/>
+          </h5>
+        </div>
+
+        <div class="col-md-8 col-sm-8 col-xs-12">
+          <a href="../assets/images/3_lista1.png" class='magnific-popup' title="View tags / Visualize marcações / Tags List">
+            <img src="../assets/images/3_lista1.png" class="example-image"/>
+          </a>
+          <a href="../assets/images/3_lista2.png" class='magnific-popup' title="View tags / Visualize marcações / Tag List">
+            <img src="../assets/images/3_lista2.png" class="example-image"/>
+          </a>
+          <a href="../assets/images/3_lista4.png" class='magnific-popup' title="View tags / Visualize marcações / tag List">
+            <img src="../assets/images/3_lista4.png" class="example-image"/>
+          </a>
+          <a href="../assets/images/3_lista5.png" class='magnific-popup' title="View tags / Visualize marcações / Tag List">
+            <img src="../assets/images/3_lista5.png" class="example-image"/>
           </a>
         </div>
     </div> <!-- /container -->
