--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -73,20 +73,6 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="https://github.com/hylozero/redmine_tpa">redmine_tpa</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <div class="f24 navbar-brand pull-right">
-                <a href="index.html"><i class="flag br"></i></a>
-              </div>
-            </li>
-            <li>
-              <div class="f24 navbar-brand pull-right">
-                <a href="../index.html"><i class="flag us"></i></a>
-              </div>
-            </li>
-          </ul>
-        </div>
       </div>
     </nav>
 
@@ -106,7 +92,24 @@
 
             <hr>
             
-            <p><i class="fa fa-github"></i> <a href="https://github.com/hylozero/redmine_tpa">Github</a></p>
+            <div class="row">
+              <div class="col-md-7 col-sm-7 col-xs-7"><i class="fa fa-github"></i> <a href="https://github.com/hylozero/redmine_tpa">Github</a></div>
+              <div class="col-md-5 col-sm-5 col-xs-5">
+                <ul class="nav flag-nav navbar-nav navbar-right">
+                  <li>
+                    <div class="f24 pull-right">
+                      <a href="index.html"><i class="flag br"></i></a>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="f24 pull-right">
+                      <a href="../index.html"><i class="flag us"></i></a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
 
           </div>
         </div>
