--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
         <div class="col-md-4 col-sm-4 col-xs-12">
          <h5>
-            Simple Bar Graph<br/>
+            Pie Graph<br/>
             <small>by Issue Tracker</small>
           </h5>
         </div>
